--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 <body>
 <br>
   <br>
+    <br>
   <div class="container">
     <div class="row">
       <div class="col-md-5">
@@ -149,10 +150,10 @@
     <audio id="audioPlayer1" controls autoplay>
     <source src="https://stream.zeno.fm/0sbug3odjzgtv" type="audio/mpeg">
     </audio>
-    <div class="buttons">
+<!--     <div class="buttons">
     <button onclick="playAudio('audioPlayer1')">Play</button>
     <button onclick="pauseAudio('audioPlayer1')">Pause</button>
-    </div>
+    </div> -->
 <br>
   </div>
 </body>
